--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+gs<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <h1>Hello from Cloudflare Pages!</h1>
-  <p>This website is hosted for free using GitHub and Cloudflare Pages.</p>
+  <h1>Greetings!</h1>
+  <p>This website is under construction. Please come back on August 26, 2025. Thanks. Sree Vadlamudi.</p>
 </body>
 </html>
