--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-gs<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -12,6 +12,7 @@ gs<!DOCTYPE html>
 </head>
 <body>
   <h1>Greetings!</h1>
-  <p>This website is under construction. Please come back on August 26, 2025. Thanks. Sree Vadlamudi.</p>
+  <p>This website is under construction. Please come back around August 26, 2025. Thanks. Sree Vadlamudi.</p>
+  <p>email: me@SreeVadlamudi.com.</p>
 </body>
 </html>
